--- a/dom基础/Dom1-10.html
+++ b/dom基础/Dom1-10.html
@@ -7,6 +7,7 @@
 <meta name="description" content="">
 <meta name="keywords" content="">
 <link href="css/Dom1-10.css" rel="stylesheet">
+<script type="text/javascript" src="js/shoplist.js"></script>
 <script type="text/javascript" src="js/Dom1-10.js"></script>
 </head>
 <body>
@@ -15,11 +16,11 @@
     		<div class="header clear">
     			<span class="fl">你的选择:</span>
     			<ul class="clear fl list">
-    				<li>
+    				<!-- <li>
     					<span>小米</span>
     					<a href="javascript:;">X</a>
 
-    				</li>
+    				</li> -->
     			</ul>	
     		</div>
     		<!-- 你的选择结束 -->
