--- a/dom基础/Dom1-11.html
+++ b/dom基础/Dom1-11.html
@@ -71,7 +71,7 @@
     			<h2>收件箱(共96封,其中<span>未读邮件</span>9封)</h2>
     		</div>
     		<div class="menu">
-    			<button class="active">删除</button>
+    			<button class="active del">删除</button>
     			<button>彻底删除</button>
     			<button>转发</button>
     			<button>举报</button>
@@ -86,17 +86,20 @@
     				<img src="img/emailHead2.png" alt="">
     			</header>
     			<ul class="list">
-    				<li>
+    				<!-- <li class="bg">
     					<input type="checkbox" name="">
     					<div class="text clear">
     						<span class="fl">添加邮件</span>
     						<span class="rl">2018-4-16</span>
     					</div>
     					<p>WebAssembly.Studio is an online IDE</p>
-    				</li>
+    				</li> -->
     				
     			</ul>
     		</div>
+    	</div>
+    	<div class="tanc">
+    		选中一封邮件
     	</div>
     </div>
 </body>
