--- a/css3/1-2.html
+++ b/css3/1-2.html
@@ -7,8 +7,14 @@
 <meta name="description" content="">
 <meta name="keywords" content="">
 <link href="" rel="stylesheet">
+<style>
+#div1 {width: 100px; height: 100px; background: red; position: absolute;}
+#img1 { position: absolute;}
+</style>
+<script type="text/javascript" src="js/1-2.js"></script>
 </head>
 <body>
+  <div id="div1"></div>
     
 </body>
 </html>
